# TheElderwoodHill

./: .gitignore  CMakeLists.txt
assets/maps/tests/: dungeon.tmj  sprite.tmj
assets/maps/tests/dungeon/: dungeon.tmx
assets/maps/tests/sprite/: Swordsman_lvl3.tmx
cmake/: CheckAssets.cmake  CheckModules.cmake  CheckToolchain.cmake  FetchModules.cmake
cmake/Modules/: FindSDL3.cmake  FindSpdlog.cmake  FindTMXParser.cmake  FindTileson.cmake  FindTinyTMX.cmake  FindUnorderedDense.cmake
src/: CMakeLists.txt  Game.cpp  Game.hpp  Map.cpp  Map.hpp  main.cpp
src/Map/: Animation.cpp  Animation.hpp  Map.cpp  Map.hpp  Renderer.cpp  Renderer.hpp
src/Utils/: Error.hpp  Logger.cpp  Logger.hpp
